@@ -1,1 +1,2 @@
 ( diff -u /dev/null commitHelper;  diff -u /dev/null PATCHSETS;  cvs diff -u -r 1.2.2.78 -r 1.2.2.79 configure.ac;  ) > 1.79.0cvs1.patchset
+( cvs diff -u -r 1.2.2.79 -r 1.2.2.80 configure.ac;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/.cvsignore;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/Makefile.am;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/plugin.c;  ) > 1.79.0cvs2.patchset
