@@ -3,11 +3,13 @@ AC_INIT(src/plugin.c)
 AC_CONFIG_AUX_DIR(config)
 AM_MAINTAINER_MODE
 
+PACKAGE=vcalendar
+
 dnl plugin version
 MAJOR_VERSION=1
 MINOR_VERSION=79
 MICRO_VERSION=0
-EXTRA_VERSION=1
+EXTRA_VERSION=2
 
 if test \( $EXTRA_VERSION -eq 0 \); then
     if test \( $MICRO_VERSION -eq 0 \); then
@@ -22,13 +24,14 @@ else
 		VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}cvs${EXTRA_VERSION}
     fi
 fi
-AC_DEFINE_UNQUOTED(PLUGINVERSION, "$VERSION", [plugin version])
 
 AC_DEFINE_UNQUOTED(CALVERSION, "$PLUGINVERSION", [plugin version])
 AC_DEFINE_UNQUOTED(CALPACKAGE, "Sylpheed-Claws vCalendar", [package])
-AM_INIT_AUTOMAKE(vcalendar, $PLUGINVERSION, no-define)
 
+AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 AM_CONFIG_HEADER(pluginconfig.h)
+AC_DEFINE_UNQUOTED(PLUGINVERSION, "$VERSION", [plugin version])
+
 
 AC_PROG_CC
 AC_ISC_POSIX
@@ -155,11 +158,17 @@ AC_CHECK_FUNCS(strdup)
 
 AC_CONFIG_HEADERS(config.h)
 
+AC_SUBST(VERSION)
+AC_SUBST(PLUGINVERSION)
+AC_SUBST(MAJOR_VERSION)
+AC_SUBST(MINOR_VERSION)
+AC_SUBST(MICRO_VERSION)
+AC_SUBST(EXTRA_VERSION)
+
 AC_OUTPUT([ m4/Makefile
 Makefile
 config/Makefile
 po/Makefile.in
-src/plugin_version.h
 src/Makefile
 libical/Makefile
 libical/libical/icalversion.h
